# cmake-cpp-github-action-test

./: action.yaml
.github/workflows/: main.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/ruby/: CMakeLists.txt
src/ruby/include/ruby/: Emulator.hpp
src/ruby/src/: Emulator.cpp
